Update ya_make.md